[project]
name = "video-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.178.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "isodate>=0.7.2",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.176",
    "yt-dlp>=2025.8.11",
]
