[project]
name = "video-mining"
version = "1.0.0"
description = "A high-performance video data mining and QA pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Utilities
    "python-dotenv",
    "isodate",
    "setuptools",
    # Pin NumPy to the stable 1.x series for compatibility with Torch/OpenCV
    "numpy<2.0",

    # YouTube and Google Drive APIs
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "yt-dlp",

    # --- Final AI & CV Dependencies ---
    # Pinning opencv-python is the key to stability.
    "opencv-python==4.9.0.80",
    # The library for YOLOv8 subject detection.
    "ultralytics",
    # The most accurate OCR library for this task.
    "easyocr",
    # A dependency for EasyOCR.
    "torchvision",
]